tests/errors/lib.core.unstack.StackUnderflow.res
>> Runtime | File: lib.core.unstack.StackUnderflow.art
     error | Line: 2
           | 
           | unsafe operation: Stack Underflow.
           | not permitted in online playground
